integrated testing fixups for JPMS